--- a/app/src/main/res/layout/fragment_slideshow.xml
+++ b/app/src/main/res/layout/fragment_slideshow.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.slideshow.SlideshowFragment">
 
     <EditText
-        android:id="@+id/status"
+        android:id="@+id/etStatus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="102dp"
@@ -22,7 +22,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/Name"
+        android:id="@+id/etName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="100dp"
@@ -44,7 +44,7 @@
         app:layout_constraintGuide_begin="20dp" />
 
     <Button
-        android:id="@+id/update"
+        android:id="@+id/sBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Update"
