--- a/app/src/main/res/layout/activity_show_profile.xml
+++ b/app/src/main/res/layout/activity_show_profile.xml
@@ -18,33 +18,36 @@
 
     <TextView
         android:id="@+id/tvname"
-        android:layout_width="144dp"
+        android:layout_width="145dp"
         android:layout_height="40dp"
         android:layout_marginStart="174dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="150dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.664"
+        app:layout_constraintHorizontal_bias="0.538"
         app:layout_constraintStart_toEndOf="@+id/imageView8"
         app:layout_constraintStart_toStartOf="parent"
-        android:textColor="@color/black"
         app:layout_constraintTop_toBottomOf="@+id/imageView8"
-        app:layout_constraintVertical_bias="0.053" />
+        app:layout_constraintVertical_bias="0.045" />
 
     <TextView
         android:id="@+id/tvstatus"
-        android:layout_width="146dp"
-        android:layout_height="41dp"
+        android:layout_width="145dp"
+        android:layout_height="40dp"
         android:layout_marginStart="141dp"
-        android:layout_marginTop="43dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="124dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvname" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/updateBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="170dp"
@@ -55,6 +58,18 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvstatus" />
+
+    <Button
+        android:id="@+id/NavBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="170dp"
+        android:layout_marginTop="23dp"
+        android:layout_marginEnd="150dp"
+        android:text="Back to Nav"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/updateBtn" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
