--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,13 +12,13 @@
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/nav_gallery"
+        android:id="@+id/nav_disscuss"
         android:name="com.example.testing_.ui.gallery.GalleryFragment"
         android:label="@string/menu_gallery"
         tools:layout="@layout/fragment_gallery" />
 
     <activity
-        android:id="@+id/nav_slideshow"
+        android:id="@+id/nav_profile"
         android:name="com.example.testing_.ShowProfile"
         android:label="@string/menu_slideshow"
         tools:layout="@layout/activity_show_profile" />
@@ -27,4 +27,9 @@
         android:name="com.example.testing_.SignInActivity"
         android:label="@string/menu_logout"
         tools:layout="@layout/activity_sign_in" />
+    <fragment
+        android:id="@+id/nav_study"
+        android:name="com.example.testing_.ui.study.StudyFragment"
+        android:label="@string/menu_study"
+        tools:layout="@layout/fragment_study" />
 </navigation>
