--- a/app/src/main/res/layout/each_item.xml
+++ b/app/src/main/res/layout/each_item.xml
@@ -1,27 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.home.HomeFragment"
-    android:orientation="vertical">
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    android:layout_height="300dp"
+    app:cardCornerRadius="8dp"
+    app:cardElevation="12dp"
+    app:cardUseCompatPadding="true">
+
 <LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:layout_margin="8dp"
     android:orientation="vertical">
-
     <TextView
         android:id="@+id/tvname"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        tools:text="user" />
-
+        tools:text= "user"
+        />
     <TextView
         android:id="@+id/tvtime"
         android:layout_width="match_parent"
@@ -33,10 +32,10 @@
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="match_parent"
         android:layout_marginTop="4dp"
         android:scaleType="centerCrop"
-        tools:srcCompact="@tools:sample/avatars" />
+         />
 
     <TextView
         android:id="@+id/tvdescription"
@@ -46,5 +45,4 @@
         tools:text= "Really cool!"
         />
 </LinearLayout>
-    </androidx.cardview.widget.CardView>
-</LinearLayout>
+</com.google.android.material.card.MaterialCardView>
