--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -34,8 +34,7 @@
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/upload_vector"
-                 />
+                app:srcCompat="@drawable/upload_vector" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
