Upload functionality and new pfp

--- a/app/src/main/res/layout/fragment_slideshow.xml
+++ b/app/src/main/res/layout/fragment_slideshow.xml
@@ -14,7 +14,8 @@
         android:layout_marginTop="248dp"
         android:layout_marginEnd="100dp"
         android:ems="10"
-        android:hint="Status"
+        android:hint="Last Name"
+        android:text=""
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -29,7 +30,7 @@
         android:layout_marginTop="168dp"
         android:layout_marginEnd="101dp"
         android:ems="10"
-        android:hint="Name"
+        android:hint="First Name"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
