--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,9 +7,9 @@
 
     <fragment
         android:id="@+id/nav_home"
-        android:name="com.example.testing_.ui.home.HomeFragment"
+        android:name="com.example.testing_.ui.home.ScrollingHomeFragment"
         android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_scrolling_home" />
 
     <activity
         android:id="@+id/nav_disscuss"
