--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,15 +7,16 @@
 
     <fragment
         android:id="@+id/nav_home"
-        android:name="com.example.testing_.ui.home.ScrollingHomeFragment"
+        android:name="com.example.testing_.ui.home.HomeFragment"
         android:label="@string/menu_home"
-        tools:layout="@layout/fragment_scrolling_home" />
+        tools:layout="@layout/fragment_home"
+        />
 
     <activity
         android:id="@+id/nav_disscuss"
-        android:name="com.example.testing_.ImagesActivity"
+        android:name="com.example.testing_.UploadActivity"
         android:label="@string/menu_gallery"
-        tools:layout="@layout/activity_images" />
+        tools:layout="@layout/activity_upload" />
 
     <fragment
         android:id="@+id/nav_profile"
@@ -29,7 +30,7 @@
         tools:layout="@layout/activity_sign_in" />
     <fragment
         android:id="@+id/nav_study"
-        android:name="com.example.testing_.ui.study.StudyFragment"
+        android:name="com.example.testing_.ui.home.ScrollingHomeFragment"
         android:label="@string/menu_study"
-        tools:layout="@layout/fragment_study" />
+        tools:layout="@layout/fragment_scrolling_home" />
 </navigation>
