--- a/app/src/main/res/layout/nav_header_main_nav.xml
+++ b/app/src/main/res/layout/nav_header_main_nav.xml
@@ -21,17 +21,17 @@
         app:srcCompat="@mipmap/ic_launcher_round" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/navName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <TextView
-        android:id="@+id/userData2"
+        android:id="@+id/navEmail"
         android:layout_width="109dp"
         android:layout_height="wrap_content" />
 
     <TextView
-        android:id="@+id/userData"
+        android:id="@+id/navStatus"
         android:layout_width="109dp"
         android:layout_height="wrap_content" />
 </LinearLayout>
