--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,9 +7,9 @@
 
     <fragment
         android:id="@+id/nav_home"
-        android:name="com.example.testing_.ui.gallery.GalleryFragment"
+        android:name="com.example.testing_.ui.home.HomeFragment"
         android:label="@string/menu_home"
-        tools:layout="@layout/fragment_gallery"
+        tools:layout="@layout/fragment_home"
         />
 
     <fragment
@@ -24,7 +24,7 @@
         tools:layout="@layout/activity_sign_in" />
     <fragment
         android:id="@+id/nav_study"
-        android:name="com.example.testing_.ui.home.HomeFragment"
+        android:name="com.example.testing_.ui.study.StudyFragment"
         android:label="@string/menu_study"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_study" />
 </navigation>
